# Discord_Bot

./: .gitignore  .replit  Discord.py  cookies_jar.json  cookies_shopee.json  on_message.json  pyproject.toml  requirements.txt  setting.json
core/: classes.py
method/: event.py  main.py  task.py
taskfile/: exchange_rate.py  shopee_coin.py
