[tool.poetry]
name = "repl_nix_DiscordBot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.26.4"
pandas = "^1.5.3"
requests = "^2.28.2"
selenium = "^4.8.0"
webdriver-manager = "^3.8.5"
bs4 = "^0.0.1"
discord = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
